--- a/DSTR-Assignment/DSTR-Assignment/DSTR-Assignment.vcxproj
+++ b/DSTR-Assignment/DSTR-Assignment/DSTR-Assignment.vcxproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <ClCompile Include="dstr-assignment.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="dstr-assignment.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
