--- a/DSTR-Assignment/DSTR-Assignment/DSTR-Assignment.vcxproj.filters
+++ b/DSTR-Assignment/DSTR-Assignment/DSTR-Assignment.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="dstr-assignment.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
